--- a/HakatonProject/wwwroot/css/style.css
+++ b/HakatonProject/wwwroot/css/style.css
@@ -702,6 +702,8 @@ font-size: 40px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end; 
+    background-size: cover;
+    background-position: center;
 }
 
 /* --- Стили для РАСКРЫТОЙ КОЛОНКИ --- */
