new controllers implemented

--- a/HakatonProject/Views/Home/Index.cshtml
+++ b/HakatonProject/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model dynamic  // или создай нормальную ViewModel
+﻿@model dynamic 
 @using HakatonProject.Models.Repositories
 @inject CurrentUserService CurrentUserService
 @inject UserRepository UserRepository
