--- a/HakatonProject/Views/Home/Index.cshtml
+++ b/HakatonProject/Views/Home/Index.cshtml
@@ -84,19 +84,19 @@
 
 <div class="dashboard-container">
     <nav class="sidebar">
-        <div class="sidebar-logo">
-            <img alt="logo" src="assets/logo.png">
-            Active Graph
-        </div>
-        <ul class="sidebar-nav">
-                <li><a href="/" style="color: #fff;"><span class="iconify" data-icon="mynaui:home"></span></a></li>
-                <li><a href="/Interest"><span class="iconify" data-icon="material-symbols:interests-rounded"></span></a></li>
-                <li><a href="/EventsPage"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
+            <div class="sidebar-logo">
+                <img src="../assets/logo.png" alt="logo">
+                Active Graph
+            </div>
+            <ul class="sidebar-nav">
+                <li><a href="Home"><span class="iconify" data-icon="mynaui:home"></span></a></li>
+                <li><a href="AnalyticPage" style="color: #fff;"><span class="iconify" data-icon="uim:analytics"></span></a></li>
+                <li><a href="EventsPage"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
             </ul>
-        <div class="sidebar-profile">
-                <a href="/Analytics"><span class="iconify" data-icon="iconamoon:profile"></span></a>
-        </div>
-    </nav>
+            <div class="sidebar-profile">
+                <a href="Interest"><span class="iconify" data-icon="eos-icons:admin"></span></a>
+            </div>
+        </nav>
 
     <main class="main-content">
 
