--- a/HakatonProject/Views/EventsPage/Index.cshtml
+++ b/HakatonProject/Views/EventsPage/Index.cshtml
@@ -1,85 +1,94 @@
-@{
-    Layout = null;
-}
-
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мероприятия</title>
-    <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet"> 
-    <style>
-        .event-list {
-            display: none;
-        }
-        .events-card {
-            gap: 0;
-        }
-    </style>   
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet"> 
+<style>
+    .event-list {
+    display: none;
+}
+.events-card {
+    gap: 0;
+}
+</style>   
 </head>
 <body>
     <div class="dashboard-container">
         <nav class="sidebar">
             <div class="sidebar-logo">
-                <img src="~/assets/logo.png" alt="logo">
+                <img src="../assets/logo.png" alt="logo">
                 Active Graph
             </div>
             <ul class="sidebar-nav">
-                <li><a href="/"><span class="iconify" data-icon="mynaui:home"></span></a></li>
-                <li><a href="/Interest"><span class="iconify" data-icon="material-symbols:interests-rounded"></span></a></li>
-                <li><a href="/EventsPage" style="color: #fff;"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
+                <li><a href="Home"><span class="iconify" data-icon="mynaui:home"></span></a></li>
+                <li><a href="AnalyticPage" style="color: #fff;"><span class="iconify" data-icon="uim:analytics"></span></a></li>
+                <li><a href="EventsPage"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
             </ul>
             <div class="sidebar-profile">
-                <a href="/Analytics"><span class="iconify" data-icon="iconamoon:profile"></span></a>
+                <a href="Interest"><span class="iconify" data-icon="eos-icons:admin"></span></a>
             </div>
         </nav>
         
         <main class="main-content">
-            <div class="widget events-card">
-                <div class="header-ec">
-                    <h3><span class="iconify" data-icon="material-symbols:event-note-rounded"></span> Мероприятия</h3>
-                </div>
+                        <div class="widget events-card">
+                <div class="header-ec"><h3><span class="iconify" data-icon="material-symbols:event-note-rounded"></span>Создание мероприятия</h3></div>
 
-                <div class="events-card-content">
-                    <div class="event-detail-card"> 
-                        <div class="event-detail-image">
-                            <span>Пикча</span>
-                        </div>
-                        <div class="event-detail-info">
-                            <h3>Название мероприятия</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quam lectus, vulputate vitae posuere in, tempus eu nibh. Quisque interdum mauris tempor tristique aliquet. Nam eleifend tellus lorem, vitae imperdiet ex pretium a. Phasellus et ante vel lectus placerat posuere. Fusce varius dui mi, at ullamcorper tortor rutrum vitae.</p>
-                            <div class="event-time">
-                                <nav class="time-start">16:00</nav>
-                                <span class="AaAAa"></span>
-                                <nav class="time-end">18:00</nav>
-                            </div>
-                            <button class="event-button">Откликнуться</button>
-                        </div>
-                    </div>
+<div class="events-card-content">
+    
+    <div class="event-detail-card"> 
+<div class="event-detail-image" id="image-preview-container">
+        
+        <div class="image-preview-box" id="image-preview-box">
+            </div>
+        
+        <div class="image-upload-controls">
+            <input type="file" id="event-image-upload" accept="image/*" style="display: none;">
+            
+            <label for="event-image-upload" class="event-button file-upload-button">
+                <span class="iconify" data-icon="material-symbols:upload-file"></span>
+                Выбрать файл...
+            </label>
+            
+            <span id="file-name-display" class="file-name-display">Файл не выбран</span>
+        </div>
+    </div>
+        <div class="event-detail-info">
+            <div class="input-group">
+    <label for="Name-Event">Название мероприятия</label>
+    <input type="text" id="Name-Event" class="styled-input" placeholder="Хакатон">
+</div>
+<div class="input-group">
+    <label for="sample-textarea">Описание</label>
+    <textarea id="sample-textarea" class="styled-textarea" placeholder="это мероприятие, на котором команды специалистов в области IT (программисты, дизайнеры, менеджеры) за ограниченное время решают поставленную задачу, создавая прототип продукта или решение конкретной проблемы." rows="6"></textarea>
+</div>
+<div class="input-time">
+    
+<div class="input-group">
+    <label for="sample-time">Начало мероприятия</label>
+    <input type="time" id="sample-time" class="styled-input styled-time" value="10:30">
+</div>
 
-                    <div class="event-detail-card">
-                        <div class="event-detail-image">
-                            <span>Пикча</span>
-                        </div>
-                        <div class="event-detail-info">
-                            <h3>Другое мероприятие</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique fugit nobis magnam fuga, aspernatur ad id in veritatis soluta aliquid accusamus beatae a voluptatum quibusdam aut excepturi iure neque labore.</p>
-                            <div class="event-time">
-                                <nav class="time-start">16:00</nav>
-                                <span class="AaAAa"></span>
-                                <nav class="time-end">18:00</nav>
-                            </div>
-                            <button class="event-button">Откликнуться</button>
-                        </div>
-                    </div>
-                </div>                                      
+<div class="input-group">
+    <label for="sample-time">Конец мероприятия</label>
+    <input type="time" id="sample-time" class="styled-input styled-time" value="17:30">
+</div>
+
+</div>
+            <button class="event-button">Создать мероприятие</button>
+        </div>
+    </div>
+
+    </div>                                      
+
             </div>
         </main>
-    </div> 
+        </div>
+    <script src="../scripts/UploadImage.js"></script>    
 </body>
 </html>
