Pages style fix

--- a/HakatonProject/Views/Home/Index.cshtml
+++ b/HakatonProject/Views/Home/Index.cshtml
@@ -89,8 +89,8 @@
                 Active Graph
             </div>
             <ul class="sidebar-nav">
-                <li><a href="Home"><span class="iconify" data-icon="mynaui:home"></span></a></li>
-                <li><a href="AnalyticPage" style="color: #fff;"><span class="iconify" data-icon="uim:analytics"></span></a></li>
+                <li><a href="Home" style="color: #fff;"><span class="iconify" data-icon="mynaui:home"></span></a></li>
+                <li><a href="AnalyticPage"><span class="iconify" data-icon="uim:analytics"></span></a></li>
                 <li><a href="EventsPage"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
             </ul>
             <div class="sidebar-profile">
@@ -112,16 +112,22 @@
                         <p>Главная</p>
                     </div>
                 </a>
-                <a href="/Interest" style="text-decoration: none; color: inherit;">
+                <a href="/AnalyticPage" style="text-decoration: none; color: inherit;">
                     <div class="sample-card">
                         <span class="iconify" data-icon="material-symbols:interests-rounded"></span>
-                        <p>Интересы</p>
+                        <p>Аналитика</p>
                     </div>
                 </a>
                 <a href="/EventsPage" style="text-decoration: none; color: inherit;">
                     <div class="sample-card">
                         <span class="iconify" data-icon="material-symbols:event-note-rounded"></span>
-                        <p>Мероприятия</p>
+                        <p>Новое мероприятие</p>
+                    </div>
+                </a>
+                <a href="/Interest" style="text-decoration: none; color: inherit;">
+                    <div class="sample-card">
+                        <span class="iconify" data-icon="material-symbols:event-note-rounded"></span>
+                        <p>Интересы</p>
                     </div>
                 </a>
             </div>
