--- a/HakatonProject/Views/Interest/Index.cshtml
+++ b/HakatonProject/Views/Interest/Index.cshtml
@@ -21,11 +21,11 @@
             </div>
             <ul class="sidebar-nav">
                 <li><a href="Home"><span class="iconify" data-icon="mynaui:home"></span></a></li>
-                <li><a href="AnalyticPage" style="color: #fff;"><span class="iconify" data-icon="uim:analytics"></span></a></li>
+                <li><a href="AnalyticPage"><span class="iconify" data-icon="uim:analytics"></span></a></li>
                 <li><a href="EventsPage"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
             </ul>
             <div class="sidebar-profile">
-                <a href="Interest"><span class="iconify" data-icon="eos-icons:admin"></span></a>
+                <a href="Interest" style="color: #fff;"><span class="iconify" data-icon="eos-icons:admin"></span></a>
             </div>
         </nav>
 
