--- a/HakatonProject/Views/AnalyticPage/Index.cshtml
+++ b/HakatonProject/Views/AnalyticPage/Index.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Аналитика</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
