--- a/HakatonProject/Views/EventsPage/Index.cshtml
+++ b/HakatonProject/Views/EventsPage/Index.cshtml
@@ -27,14 +27,14 @@
             </div>
             <ul class="sidebar-nav">
                 <li><a href="Home"><span class="iconify" data-icon="mynaui:home"></span></a></li>
-                <li><a href="AnalyticPage" style="color: #fff;"><span class="iconify" data-icon="uim:analytics"></span></a></li>
-                <li><a href="EventsPage"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
+                <li><a href="AnalyticPage"><span class="iconify" data-icon="uim:analytics"></span></a></li>
+                <li><a href="EventsPage" style="color: #fff;"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
             </ul>
             <div class="sidebar-profile">
                 <a href="Interest"><span class="iconify" data-icon="eos-icons:admin"></span></a>
             </div>
         </nav>
-        
+
         <main class="main-content">
                         <div class="widget events-card">
                 <div class="header-ec"><h3><span class="iconify" data-icon="material-symbols:event-note-rounded"></span>Создание мероприятия</h3></div>
