--- a/HakatonProject/Views/AuthPage/Index.cshtml
+++ b/HakatonProject/Views/AuthPage/Index.cshtml
@@ -55,8 +55,8 @@
                 </div>
 
                 <div class="input-group">
-                    <label for="register-email">Email</label>
-                    <input name="username" type="email" id="register-email" class="styled-input" placeholder="example@university.com" required>
+                    <label for="register-email">UserName</label>
+                    <input name="username" type="text" id="register-email" class="styled-input" placeholder="user1234" required>
                 </div>
                 
                 <div class="input-group">
